start on models

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,7 @@ html
             ul.nav
               != navigation('Stats', '/stats')
               != navigation('Devices', '/devices')
+              != navigation('Rules', '/rules')
               != navigation('Models', '/models')
     .container
       block content
