--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,10 +2,11 @@ html
 
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    style
+    style.
       body { padding-top: 60px; }
     link(rel="stylesheet", href="/css/bootstrap.min.css")
     link(rel="stylesheet", href="/css/bootstrap-responsive.min.css")
+    link(rel="stylesheet", href="/css/service.css")
     block head
 
   body
