--- a/views/stats/index.jade
+++ b/views/stats/index.jade
@@ -9,7 +9,7 @@ block content
   table.table.table-striped.table-bordered#stats
     tr
       th Messages per Second
-      td#messages 0
+      td#messages
     tr
       th Device Count
       td#devices
