--- a/views/devices/index.jade
+++ b/views/devices/index.jade
@@ -11,11 +11,13 @@ block content
       h3= model.name
       h4= model.description
 
-      table.table.table-striped.table-bordered#devices(data-outputs=outputs(model))
+      table.table.table-striped.table-bordered#devices(data-outputs=outputs(model), data-inputs=inputs(model))
         thead
           tr
             th ID
             each type, name in model.outputs
+              th= name
+            each type, name in model.inputs
               th= name
             th Last Message
         tbody
