--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
       body { padding-top: 60px; }
     link(rel="stylesheet", href="/css/bootstrap.min.css")
     link(rel="stylesheet", href="/css/bootstrap-responsive.min.css")
+    link(rel="stylesheet", href="/css/pick-a-color.min.css")
     link(rel="stylesheet", href="/css/service.css")
     block head
 
@@ -30,6 +31,8 @@ html
     script(type="text/javascript", src="http://code.jquery.com/jquery-1.10.1.min.js")
     script(type="text/javascript", src="/faye/client.js")
     script(type="text/javascript", src="/js/bootstrap.min.js")
+    script(type="text/javascript", src="/js/tinycolor.min.js")
+    script(type="text/javascript", src="/js/pick-a-color.min.js")
     script(type="text/javascript", src="/js/jquery.timeago.js")
     script(type="text/javascript", src="/js/service.js")
     block script
