--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,7 +28,7 @@ html
     .container
       block content
 
-    script(type="text/javascript", src="http://code.jquery.com/jquery-1.10.1.min.js")
+    script(type="text/javascript", src="//code.jquery.com/jquery-1.10.1.min.js")
     script(type="text/javascript", src="/faye/client.js")
     script(type="text/javascript", src="/js/bootstrap.min.js")
     script(type="text/javascript", src="/js/tinycolor.min.js")
