call it Building Monitor

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,7 +16,7 @@ html
     .navbar.navbar-inverse.navbar-fixed-top
       .navbar-inner
         .container
-          a.brand(href="/") Machine Cloud
+          a.brand(href="/") Building Monitor
           ul.nav
             != navigation('Dashboard', '/dashboard')
             != navigation('Devices', '/devices')
